@@ -14,12 +14,19 @@ my $build = Test::Run::Builder->new(
     license     => 'perl',
     script_files => [ 'findrule' ],
     requires    => {
+        'Carp'               => 0,
+        'Cwd'                => 0,
+        'File::Basename'     => 0,
+        'File::Find::Object' => '0.1.9',
+        'File::Spec'         => 0,
+        'Number::Compare'    => 0,
+        'strict'             => 0,
+        'Text::Glob'         => 0,
+        'vars'               => 0,
+        'warnings'           => 0,
+    },
+    build_requires => {
         'Test::More'      => 0,
-        'Number::Compare' => 0,
-        'Text::Glob'      => 0,
-        'File::Find'      => 0,
-        'File::Spec'      => 0,
-        'Cwd'             => 0,
     },
     create_makefile_pl => 'traditional',
    );
